# fatigue-driving

./: .editorconfig  .gitignore  .prettierignore  .prettierrc.yml  AGENTS.md  Cargo.toml  Dioxus.toml  Makefile  config.json  config.ts  package.json
.cargo/: config.toml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: config.yml
client/: Cargo.toml  Dioxus.toml  README.md
client/assets/: tailwind.css
client/assets/styling/: main.css
client/src/: main.rs
client/src/components/: mod.rs  source_selector.rs  video_canvas.rs
client/src/core/: shm.rs
launcher/: index.ts
scripts/: buildLauncher.ts  clean.ts  download_models.ts  linuxBuilder.ts  macosBuilder.ts  postinstall.ts  updateVersion.ts  windowsBudder.ts
scripts/lib/: client.ts  config.ts  copy.ts  getOutDir.ts  random.ts  server.ts
server/: .gitignore  fatigue-driving-server.debug.spec  fatigue-driving-server.release.spec  pyproject.toml  requirements.txt
server/src/: main.py  train.py
server/src/core/: __init__.py  fatigue_driving.py  preprocessor.py  shm.py
server/src/models/: __init__.py  loader.py  manager.py
server/tests/: __init__.py  test_manager.py  test_shm.py
server/tools/: gen_manifest.py
