[package]
name = "fatigue-driving"
version = "0.1.0"
authors = ["Efahn Joe <efahnjoe@gmail.com>"]
edition = "2021"

[dependencies]
dioxus = { version = "0.7.0", features = ["router", "fullstack"] }
dxc = "0.1.8"
js-sys = "0.3.83"
wasm-bindgen = { version = "0.2.106", optional = true }
wasm-bindgen-futures = { version = "0.4.56", optional = true }
web-sys = { version = "0.3.83", features = [
  "Document",
  "HtmlElement",
  "EventTarget",
  "Window",
  "Navigator",
  "MediaDevices",
  "MediaStreamConstraints",
  "console",
] }

[features]
default = ["desktop"]
web = ["dioxus/web", "dep:wasm-bindgen", "dep:wasm-bindgen-futures"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server"]
