[project]
name = "fatigue-driving-server"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.7.0",
    "iceoryx2>=0.8.1",
    "matplotlib>=3.10.8",
    "mediapipe>=0.10.32",
    "numpy>=2.4.2",
    "onnxruntime>=1.24.2",
    "onnxscript>=0.6.2",
    "opencv-python-headless==4.10.0.84",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.22",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "tensorboard>=2.20.0",
    "tqdm>=4.67.3",
    "uvicorn[standard]>=0.41.0",
    "websockets>=16.0",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.19.0",
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
